Updated links so they work on mobile

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3">
 					<!-- Start Portfolio Item -->
 					<div class="hover-details">
-						<img class="img-responsive img-thumbnail" src="img/uw_thumb.png" alt="UWOzarks.com from 2014" title="uwozarks.com thumbnail" /><!-- Image Thumbnail  -->
+						<a href="https://youtu.be/Njymf4xAu78" taget="_blank"><img class="img-responsive img-thumbnail" src="img/uw_thumb.png" alt="UWOzarks.com from 2014" title="uwozarks.com thumbnail" /></a><!-- Image Thumbnail  -->
 						<div class="img-cover youtubevid">
 							<a href="#" class="img-zoom slvj-link-lightbox 2" data-videoid="Njymf4xAu78" data-videosite="youtube"><i class="icon-magnifier"></i></a><!-- Large Image  -->
 							<h3>United Way of the Ozarks</h3><!-- Image Description  -->
@@ -177,7 +177,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3">
 					<!-- Start Portfolio Item -->
 					<div class="hover-details">
-						<img class="img-responsive img-thumbnail" src="img/emily_thumb.png" alt="McKinneyMusicTherapy.com" title="McKinney Music Therapy Site" /><!-- Image Thumbnail  -->
+						<a href="http://mckinneymusictherapy.com" target="_blank"><img class="img-responsive img-thumbnail" src="img/emily_thumb.png" alt="McKinneyMusicTherapy.com" title="McKinney Music Therapy Site" /></a><!-- Image Thumbnail  -->
 						<div class="img-cover">
 							<a href="http://mckinneymusictherapy.com" class="img-zoom" target="_blank"><i class="icon-magnifier"></i></a><!-- Large Image  -->
 							<h3>McKinneyMusicTherapy.com</h3><!-- Image Description  -->
@@ -188,7 +188,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3">
 					<!-- Start Portfolio Item -->
 					<div class="hover-details">
-						<img class="img-responsive img-thumbnail" src="img/mar_thumb.png" alt="MissouriAutismReport.com" title="Missouri Autism Report" /><!-- Image Thumbnail  -->
+						<a href="http://moautismreport.com" target="_blank"><img class="img-responsive img-thumbnail" src="img/mar_thumb.png" alt="MissouriAutismReport.com" title="Missouri Autism Report" /></a><!-- Image Thumbnail  -->
 						<div class="img-cover">
 							<a href="http://moautismreport.com" target="_blank" class="img-zoom"><i class="icon-magnifier"></i></a><!-- Large Image  -->
 							<h3>MOAutismReport.com</h3><!-- Image Description  -->
@@ -199,7 +199,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3">
 					<!-- Start Portfolio Item -->
 					<div class="hover-details">
-						<img class="img-responsive img-thumbnail" src="img/megan_thumb.png" alt="MeganBlevins.com" title="MeganBlevins.com" /><!-- Image Thumbnail  -->
+						<a href="http://meganblevins.com" target="_blank"><img class="img-responsive img-thumbnail" src="img/megan_thumb.png" alt="MeganBlevins.com" title="MeganBlevins.com" /></a><!-- Image Thumbnail  -->
 						<div class="img-cover">
 							<a href="http://meganblevins.com" target="_blank" class="img-zoom"><i class="icon-magnifier"></i></a><!-- Large Image  -->
 							<h3>MeganBlevins.com</h3><!-- Image Description  -->
